<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/rootLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:background="@color/colorPrimaryDark"
    android:weightSum="160">

    <!--android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/MyToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink"
        android:gravity="center_vertical"/ -->

    <!--     Row 1 Starts From Here -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20"
        >

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/TextViewBg"
        android:layout_span="4"
        android:textColor="#000000"
        android:maxLines="5"
        android:textSize="40sp"
        />
    </TableRow>

    <!--     Row 2 Starts From Here -->

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="20">
    <EditText
        android:id="@+id/edt1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/EditTextBg"
        android:enabled="false"
        android:gravity="bottom"
        android:layout_span="4"
        android:lines="2"
        android:maxLines="2"
        android:textColor="#000000"
        android:textSize="30sp" />
    </TableRow>



    <!--     Row 3 Starts From Here -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20">



        <Button
            android:id="@+id/buttonLBracket"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_buttonLBracket"
            android:textSize="30sp"
            android:background="@color/OperatorsBG"
            android:textColor="@color/OperatorsFG"
            android:layout_span="1"
            android:typeface="monospace"

            />

        <Button
            android:id="@+id/buttonRBracket"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_buttonRBracket"
            android:textSize="30sp"
            android:background="@color/OperatorsBG"
            android:textColor="@color/OperatorsFG"
            android:layout_span="1"
            android:typeface="monospace"/>

        <Button
            android:id="@+id/buttonC"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_C"
            android:textSize="30sp"
            android:background="@color/OperatorsBG"
            android:textColor="@color/OperatorsFG"
            android:layout_span="1"
            android:typeface="monospace"

            />


        <Button
            android:id="@+id/buttondel"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_del"
            android:textSize="30sp"
            android:background="@color/OperatorsBG"
            android:textColor="@color/OperatorsFG"
            android:layout_span="1"
            android:typeface="monospace"
            />

    </TableRow>


    <!--     Row 4 Starts From Here -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20"
        >

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_7"
            android:textSize="30sp"
            android:background="@drawable/button_s"
            android:textColor="@drawable/button_text_colour"
            android:layout_span="1"
            android:typeface="monospace"

            />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_8"
            android:textSize="30sp"
            android:background="@drawable/button_s"
            android:textColor="@drawable/button_text_colour"
            android:layout_span="1"
            android:typeface="monospace"
           />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_9"
            android:textSize="30sp"
            android:background="@drawable/button_s"
            android:textColor="@drawable/button_text_colour"
            android:layout_span="1"
            android:typeface="monospace"
            />


        <Button
            android:id="@+id/buttondiv"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_div"
            android:textSize="30sp"
            android:background="@color/OperatorsBG"
            android:textColor="@color/OperatorsFG"
            android:layout_span="1"
            android:typeface="monospace"/>


    </TableRow>


    <!--     Row 5 Starts From Here -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_4"
            android:textSize="30sp"
            android:background="@drawable/button_s"
            android:textColor="@drawable/button_text_colour"
            android:layout_span="1"
            android:typeface="monospace"
/>

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_5"
            android:textSize="30sp"
            android:background="@drawable/button_s"
            android:textColor="@drawable/button_text_colour"
            android:layout_span="1"
            android:typeface="monospace"
   />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_6"
            android:textSize="30sp"
            android:background="@drawable/button_s"
            android:textColor="@drawable/button_text_colour"
            android:layout_span="1"
            android:typeface="monospace"
/>


        <Button
            android:id="@+id/buttonmul"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_mul"
            android:textSize="30sp"
            android:background="@color/OperatorsBG"
            android:textColor="@color/OperatorsFG"
            android:layout_span="1"
            android:typeface="monospace"/>



    </TableRow>


    <!--     Row 6 Starts From Here -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20">


        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_1"
            android:textSize="30sp"
            android:background="@drawable/button_s"
            android:textColor="@drawable/button_text_colour"
            android:layout_span="1"
            android:typeface="monospace"
/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_2"
            android:textSize="30sp"
            android:background="@drawable/button_s"
            android:textColor="@drawable/button_text_colour"
            android:layout_span="1"
            android:typeface="monospace"
/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_3"
            android:textSize="30sp"
            android:background="@drawable/button_s"
            android:textColor="@drawable/button_text_colour"
            android:layout_span="1"
            android:typeface="monospace"
/>

        <Button
            android:id="@+id/buttonsub"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_sub"
            android:textSize="30sp"
            android:background="@color/OperatorsBG"
            android:textColor="@color/OperatorsFG"
            android:layout_span="1"
            android:typeface="monospace"
            />


    </TableRow>


    <!--     Row 7 Starts From Here -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20">


        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_dot"
            android:textSize="30sp"
            android:background="@drawable/button_s"
            android:textColor="@drawable/button_text_colour"
            android:layout_span="1"
            android:typeface="monospace"
/>

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_0"
            android:textSize="30sp"
            android:background="@drawable/button_s"
            android:textColor="@drawable/button_text_colour"
            android:layout_span="1"
            android:typeface="monospace"
/>



        <Button
            android:id="@+id/buttoneql"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_equal"
            android:textSize="30sp"
            android:background="@drawable/button_s"
            android:textColor="@drawable/button_text_colour"
            android:layout_span="1"
            android:typeface="monospace"
/>
        <Button
            android:id="@+id/buttonadd"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_add"
            android:textSize="30sp"
            android:background="@color/OperatorsBG"
            android:textColor="@color/OperatorsFG"
            android:layout_span="1"
            android:typeface="monospace"/>


    </TableRow>




    <!--     Row 8 Starts From Here . New in Version 1.3 -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20">




        <Button
            android:id="@+id/buttonof"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_off"
            android:textSize="30sp"
            android:background="@drawable/button_s"
            android:textColor="@drawable/button_text_colour"
            android:layout_span="1"
            android:typeface="monospace"
            />



        <Button
            android:id="@+id/buttoninterad"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_Inter"
            android:textSize="30sp"
            android:background="@drawable/button_s"
            android:textColor="@drawable/button_text_colour"
            android:layout_span="1"
            android:typeface="monospace"
            />
        <Button
            android:id="@+id/buttonvedioad"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_Vedio"
            android:textSize="30sp"
            android:background="@drawable/button_s"
            android:textColor="@drawable/button_text_colour"
            android:layout_span="1"
            android:typeface="monospace"/>

        <Button
            android:id="@+id/buttonskin"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_Skins"
            android:textSize="30sp"
            android:background="@color/OperatorsBG"
            android:textColor="@color/pink"
            android:layout_span="1"
            android:typeface="monospace"
            />


    </TableRow>

    <!--     Row 9 Starts From Here -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20">

        <TextView
            android:id="@+id/textViewLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:background="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textColor="@color/LinkColour"
            android:gravity="center_horizontal"/>

    </TableRow>
    <TableRow>

        <com.google.android.gms.ads.AdView
            android:id="@+id/banner_AdView"
            android:layout_width="wrap_content"
            android:layout_span="4"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/ad_id_banner" />

    </TableRow>


</TableLayout>